crates/pyxray-render/tests/snapshots/snapshots__mono-card.snap
---
source: crates/pyxray-render/tests/snapshots.rs
expression: text
---
+--------------------------------------------------------------------------------------------------+
| pyxray  sketchy.py                             21 lines | 16 statements | depth 2 | cyclomatic 2 |
| reads the environment -> makes 2 network calls -> DELETES /tmp/stage -> evaluates code at runti~ |
| risk ##################  100  read it first                                    .>X ~$e ! .... .. |
+--------------------------------------------------------------------------------------------------+
+- CAPABILITIES -----------------------------------------------------------------------------------+
|  ~ net 2!   e env 2!   $ shell 2!   X delete 1!   ! eval 1!   > write 3   . print 1              |
+--------------------------------------------------------------------------------------------------+
+- TEXTURE ----------------------------------------------------------------------------------------+
| __________...__________....__________....______________...._____----######----....______________ |
|              !!!!!!        !!!!!>>>>>    !!!!!    !!!!!         >>>>>>>>>!!!!!    !!!!!!!!!!.... |
+--------------------------------------------------------------------------------------------------+
+- WHAT IT DOES -----------------------------------------------------------------------------------+
|    4 ! e getenv   API_TOKEN                                ! reads a secret from the environment |
|    7 ! X rmtree   /tmp/stage                    ! recursively deletes a directory; ignore_error~ |
|    8   > mkdir    /tmp/stage                                                                     |
|   10 ! ~ GET      https://example.invalid/paylo~! verify=False - TLS certificates are not check~ |
|   12 ! ! unpickle pickle.loads                                  ! unpickling runs arbitrary code |
|   15 - > truncate f"{STAGING}/{name}.sh"                                                         |
|   16 - > write    open(f"{STAGING}/{name}.sh", "w")                                              |
|   17 ! $ run      f"bash {STAGING}/{name}.sh"   ! runs an external command; shell=True - the ar~ |
|   19 ! ~ POST     https://example.invalid/report                   ! sends data to a remote host |
|   19   e probe    os.uname                                                                       |
|   20 ! $ run      ["rm", "-rf", STAGING]            ! runs an external command; recursive delete |
|   21   . print    done                                                                           |
+--------------------------------------------------------------------------------------------------+
